<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_alert_dialog"
        android:padding="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/AlertDialogueText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/if_you_exist_now_you_will_lose_your_points"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/please_think_again"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ExistButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="1dp"
                app:backgroundTint="@null"
                android:background="@drawable/background_button_alert_dialog"
                android:text="@string/exist"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/ContinueButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="1dp"
                app:backgroundTint="@null"
                android:background="@drawable/background_button_alert_dialog"
                android:text="@string/Continue"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>