<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/mainBackground"
    tools:context="com.ziad_emad_739.quizey.ui.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/main4"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_play"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="100dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_now_and_enjoy"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text_name"
            android:padding="20dp"
            android:layout_marginTop="150dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:singleLine="true"
            android:imeOptions="actionGo"
            android:hint="@string/name"
            android:textColorHint="@color/main"
            android:textColor="@color/main"
            android:textSize="21sp"
            android:inputType="text" />

        <Button
            android:id="@+id/PlayNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@null"
            android:background="@drawable/background_button_play_now"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/play_now"
            android:textSize="30sp"
            android:textAllCaps="false"/>

    </LinearLayout>

</ScrollView>