<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context="com.ziad_emad_739.quizey.ui.MainActivity">

    <include
        android:id="@+id/myToolbar"
        layout="@layout/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:background="@color/mainBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/Image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/photo"/>

            <TextView
                android:id="@+id/Hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/main4"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/TextForCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/choose_one_of_this_categories_and_enjoy"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAlignment="center"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_keyboard_double_arrow_down_24"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/History"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"
                android:background="@drawable/background_for_content"/>

            <TextView
                android:id="@+id/Countries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/countries"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"
                android:background="@drawable/background_for_content"/>

            <TextView
                android:id="@+id/Math"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/math"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"
                android:background="@drawable/background_for_content"/>

            <TextView
                android:id="@+id/Football"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/football"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"
                android:background="@drawable/background_for_content"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>