<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ziad_emad_739.quizey.ui.ResultActivity"
    android:background="@color/mainBackground">

    <include
        android:id="@+id/myToolbar"
        layout="@layout/toolbar_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:background="@color/mainBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/total_correct_answers"
                android:textSize="21sp"
                android:textColor="@color/white"
                android:layout_gravity="left" />

            <TextView
                android:id="@+id/textResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="21sp"
                android:textColor="@color/main4"
                android:layout_gravity="left"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/main"
                android:layout_marginTop="90dp"
                app:contentPaddingTop="30dp"
                app:contentPaddingBottom="30dp"
                app:contentPaddingLeft="10dp"
                app:contentPaddingRight="10dp"
                app:cardCornerRadius="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/your_final_score_is"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/Result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/white"
                        android:textSize="120sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/winnerOrLoser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tryAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@null"
                android:background="@drawable/background_button_play_now"
                android:padding="10dp"
                app:icon="@drawable/ic_baseline_try_again_24"
                app:iconSize="40dp"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                android:drawablePadding="10dp"
                android:layout_marginTop="100dp"
                android:text="@string/try_again"
                android:textSize="30sp"
                android:textAllCaps="false"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>